# fastmcp-test

./: AGENTS.md  README.md  pyproject.toml
openspec/changes/add-dynamic-mcp-tools/: design.md  proposal.md  tasks.md
openspec/changes/add-dynamic-mcp-tools/specs/dynamic-mcp-tools/: spec.md
src/dynamic_mcp/: __init__.py  main.py
src/dynamic_mcp/api/: __init__.py  routes.py
src/dynamic_mcp/tools/: __init__.py  dynamic.py
tests/: __init__.py  test_mcp_server.py  test_rest_api.py  test_runtime_registration.py
